# refactoring_book

./: README.md  mypy.ini  pyproject.toml
chapter_1/: app.py  statement.py
tests/: test_app1.py
tests/_chapter_1/: test_code.py
